fixed space bg + chat sidebar open state space squish + chat relative positioning + chat mobile view

--- a/src/components/attendee/AttendeeLayout.module.scss
+++ b/src/components/attendee/AttendeeLayout.module.scss
@@ -3,6 +3,7 @@
 @use "scss/attendee/font";
 @use "scss/attendee/layout";
 @use "scss/attendee/layer";
+@use "scss/attendee/theme";
 @use "scss/attendee/breakpoint";
 
 $-z-index--ui: layer.level(layer.$z-index--space);
@@ -30,11 +31,12 @@ $-z-index--popover: layer.level($-z-index--ui);
   padding-right: 0;
   z-index: layer.$z-index--space;
   transition: filter 2s ease;
+  background-color: theme.$c-glass-panel-background;
 }
 
 .LayerUi {
   position: fixed;
-  top: space.empty(1);
+  top: 0;
   height: 100%;
   width: 100%;
   z-index: $-z-index--ui;
@@ -47,7 +49,6 @@ $-z-index--popover: layer.level($-z-index--ui);
   transition: filter 2s ease;
 
   @media (min-width: breakpoint.$md) {
-    border-radius: 0;
     top: space.empty(1);
   }
 
@@ -60,9 +61,10 @@ $-z-index--popover: layer.level($-z-index--ui);
   }
 }
 
-.LayerUiAbsolute {
-  position: absolute;
-  top: 0px;
+.LayerUiRelative {
+  position: relative;
+  top: space.empty(3);
+  height: 0px;
 
   @media (min-width: breakpoint.$md) {
     top: space.empty(1);
